# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap_mangen = "0.2.26"
clap_complete = "4.5.42"
clap = "4.5.27"

[dependencies.ncspot]
default-features = false
path = ".."

[lints]
workspace = true
