# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap_mangen = "0.2.29"
clap_complete = "4.5.65"
clap = "4.5.56"

[dependencies.ncspot]
default-features = false
path = ".."

[lints]
workspace = true
